--- a/firebase.json
+++ b/firebase.json
@@ -1,17 +1,11 @@
 {
   "hosting": {
-    "public": "/index.html",
+    "public": ".",
     "ignore": [
       "firebase.json",
       ".firebaserc",
       "**/.*",
       "**/node_modules/**"
     ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
   }
 }
