--- a/package.json
+++ b/package.json
@@ -2,13 +2,23 @@
   "name": "collection-backend",
   "version": "1.0.0",
   "description": "Backend for the Mineral Collection App",
-  "main": "server.js",
+  "private": true,
+  "type": "module",
   "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
     "start": "node server.js"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "typescript": "^5.5.3",
+    "vite": "^5.3.3"
   }
 }
