--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@google/genai": "^1.25.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2"
   },
   "devDependencies": {
+    "@types/node": "^20.14.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
